fix: decreasing herb media size on small screen and removing tool tip

--- a/src/components/common/loader.css
+++ b/src/components/common/loader.css
@@ -4,7 +4,7 @@
     display: grid;
     border: 4px solid #0000;
     border-radius: 50%;
-    border-right-color: #25b09b;
+    border-right-color: #329E17;
     animation: l1 1s infinite linear;
 }
 .loader::before,
